updated image url for campus map

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
     <div class="column2">
 
       <p><a href="https://www.w3schools.com">
-      <img src="https://github.com/lmiddleton5/Portfolio/blob/master/CampusMap.png" alt="Forest" class="tst"></a></p>
+      <img src="https://github.com/lmiddleton5/Portfolio/blob/main/CampusMap.png?raw=true" alt="Forest" class="tst"></a></p>
       <p class="campustxt">UCLan Students' Union Campus Map</p>
     </div>
    
