updated URL for Campus Map project

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
     </div>
     <div class="column2">
 
-      <p><a href="https://www.w3schools.com">
+      <p><a href="https://lmiddleton5.github.io/Campus-Map/">
       <img src="https://github.com/lmiddleton5/Portfolio/blob/main/CampusMap.png?raw=true" alt="Forest" class="tst"></a></p>
       <p class="campustxt">UCLan Students' Union Campus Map</p>
     </div>
